added direct respond to inquiries todo

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
  * Convert to twisted IRC + NLTK
  * Keep a frequency/business rating for channels
  * Fix user trust to reload dynamically
+ * Respond to direct inquiries
