--- a/TODO
+++ b/TODO
@@ -6,3 +6,5 @@
  * Keep a frequency/business rating for channels
  * Fix user trust to reload dynamically
  * Respond to direct inquiries
+ * Make winnie spend a certain amount of the time 'away'
+ * Channel inactivity should trigger /away or a provoking statement
