--- a/README
+++ b/README
@@ -1,9 +1,19 @@
-winnie
-======
+# winnie
+
+![](https://raw.github.com/jmkogut/winnie/master/doc/mascotu.jpg)
+
+## Why?
+
+winnie is an IRC bot. She sits and waits for people to make statements, "this car is fast," "you are a fatass," "I have a rash." Everything that gets said over the period in which she observes a channel is recorded. Meticulously. Using the natural language processing toolkit [1], she can analyse english on a really, really mediocre level. 
 
 
-winnie is an IRC bot. She sits and waits for people to make statements, "this car is fast," "you are a fatass," "I have a rash."
+## What value does she bring?
 
-She will then spit out these statements in conversation later whenever appropriate.
+Humour, sometimes. I can't count the amount of *hilarious* and _zany_ situations I've found myself in with my IRC pals, all thanks to winnie. She reall is a champ. However retarded abzde [2] says she may be.
 
-There is a markov functionality as well for increased amusement.
+
+I never had the time to actually make her that intelligent, the extent of her speaking abilities involve precisely parrotting people or markov chain generation, neither of which are entirely perfect. Give it time.
+
+### Thank you
+
+Get fucked.
